--- a/k8s/wyk10/pod-definition.yml
+++ b/k8s/wyk10/pod-definition.yml
@@ -2,7 +2,8 @@ apiVersion: v1
 
 kind: Service
 
-metadata: myapp-service
+metadata: 
+    name: myapp-service
 
 spec:
     type: NodePort
@@ -13,4 +14,4 @@ spec:
     
     selector:
         app: myapp
-        type: frontend
+        type: backend
